--- a/src/views/layout.twig
+++ b/src/views/layout.twig
@@ -1,12 +1,13 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>{% block title %} uoMusic {% endblock %}</title>
+  <title>{% block title %} MyWallapop {% endblock %}</title>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="/stylesheets/style.css" />
   {% block scripts %} {% endblock %}
 </head>
 <body>
@@ -20,17 +21,27 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <img src="/images/logo.png" alt="logo"/>
+      <a class="navbar-brand" href="/">
+        <img class="nav-img" src="/images/logo.png" alt="logo"/>
+        MyWallapop
+      </a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
+      {%  if user %}
       <ul class="nav navbar-nav">
-        <li id="myshop" class="active"><a href="/shop">Tienda</a></li>
-        <li id="mypublication"><a href="/publications">Publicaciones</a></li>
-        <li id="mybuy"><a href="/purchases">Compras</a></li>
-     </ul>
+        <li id="myshop" class="active"><a href="/">Buscar</a></li>
+        <li id="mypublication"><a href="/my-offers">Mis ofertas</a></li>
+        <li id="mybuy"><a href="/offers/bought">Ofertas Compradas</a></li>
+      </ul>
+      {% endif %}
       <ul class="nav navbar-nav navbar-right">
-	    <li><a href="/users/signup"><span class="glyphicon glyphicon-user"></span> Registrate</a></li>
-        <li><a href="/users/login"><span class="glyphicon glyphicon-log-in"></span> Identifícate</a></li>
+      {% if user %}
+        <li><p class="navbar-text">{{ user }}<p></li>
+        <li><a href="/logout"><span class="glyphicon glyphicon-log-out"></span> Cerrar sesión</a></li>
+      {% else %}
+	      <li><a href="/signup"><span class="glyphicon glyphicon-user"></span> Registrate</a></li>
+        <li><a href="/login"><span class="glyphicon glyphicon-log-in"></span> Identifícate</a></li>
+      {% endif %}
       </ul>
     </div>
   </div>
@@ -46,7 +57,14 @@
         messageType = 'alert-info';
       }
       $(".container")
-      .append("<div class='alert " + messageType + "'>" + message + " </div>");
+      .append(
+        `<div class='alert ${messageType}'>`+
+          `<button type="button" class="close" data-dismiss="alert" aria-label="Close">` +
+            `<span aria-hidden="true">&times;</span>` +
+          `</button>` +
+          message +
+        `</div>`
+      );
     }
   </script>
   <!-- Contenido -->
