--- a/src/views/layout.twig
+++ b/src/views/layout.twig
@@ -30,7 +30,7 @@
       {%  if user %}
       <ul class="nav navbar-nav">
         <li id="myshop" class="active"><a href="/">Buscar</a></li>
-        <li id="mypublication"><a href="/my-offers">Mis ofertas</a></li>
+        <li id="mypublication"><a href="/offers/my-offers">Mis ofertas</a></li>
         <li id="mybuy"><a href="/offers/bought">Ofertas Compradas</a></li>
       </ul>
       {% endif %}
