Terminada funcionalidad de listar ofertas propias y eliminar ofertas

--- a/src/views/layout.twig
+++ b/src/views/layout.twig
@@ -59,7 +59,7 @@
       }
       $(".container")
       .append(
-        `<div class='alert ${messageType}'>`+
+        `<div class='alert alert-dismissible ${messageType}'>`+
           `<button type="button" class="close" data-dismiss="alert" aria-label="Close">` +
             `<span aria-hidden="true">&times;</span>` +
           `</button>` +
