--- a/src/views/offers/new.twig
+++ b/src/views/offers/new.twig
@@ -13,16 +13,16 @@
       </div>
     </div>
     <div class="form-group">
-      <label class="control-label col-sm-2" for="title">Descripción:</label>
+      <label class="control-label col-sm-2" for="description">Descripción:</label>
       <div class="col-sm-10">
-        <textarea id="description" class="form-control" placeholder="Descripción de tú oferta"></textarea>
+        <textarea id="description" class="form-control" placeholder="Descripción de tú oferta" name="description"></textarea>
       </div>
     </div>
     <div class="form-group">
       <label class="control-label col-sm-2" for="price">Precio:</label>
       <div class="col-sm-10">
         <input id="price" type="number" class="form-control" name="price"
-            placeholder="Precio de tú oferta" />
+            placeholder="Precio de tú oferta en euros" />
       </div>
     </div>
 
