--- a/src/views/users.twig
+++ b/src/views/users.twig
@@ -1,5 +1,7 @@
 {% extends "layout.twig" %}
-{% block title %} Users – MyWallapop {% endblock %}
+
+{% block title %} Usuarios {% endblock %}
+
 {% block main_container %}
     <h2>Usuarios:</h2>
     <form method="post" action="/users">
