--- a/src/views/layout.twig
+++ b/src/views/layout.twig
@@ -29,11 +29,18 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       {%  if user %}
-      <ul class="nav navbar-nav">
-        <li id="myshop" class="active"><a href="/">Buscar</a></li>
-        <li id="mypublication"><a href="/offers/my-offers">Mis ofertas</a></li>
-        <li id="mybuy"><a href="/offers/bought">Ofertas Compradas</a></li>
-      </ul>
+        {% if user!= "admin@email.com" %}
+         <ul class="nav navbar-nav">
+           <li id="myshop" class="active"><a href="/">Buscar</a></li>
+           <li id="mypublication"><a href="/offers/my-offers">Mis ofertas</a></li>
+           <li id="mybuy"><a href="/offers/bought">Ofertas Compradas</a></li>
+         </ul>
+        {% else %}
+        <ul class="nav navbar-nav">
+          <li id="users"><a href="/users">Usuarios</a></li>
+          <li id="logs"><a >Logs</a></li>
+        </ul>
+        {% endif %}
       {% endif %}
       <ul class="nav navbar-nav navbar-right">
       {% if user %}
