Logs PET, listado y eliminado

--- a/src/views/layout.twig
+++ b/src/views/layout.twig
@@ -38,7 +38,7 @@
         {% else %}
         <ul class="nav navbar-nav">
           <li id="users"><a href="/users">Usuarios</a></li>
-          <li id="logs"><a >Logs</a></li>
+          <li id="logs"><a href="/logs">Logs</a></li>
         </ul>
         {% endif %}
       {% endif %}
