--- a/src/views/offers/new.twig
+++ b/src/views/offers/new.twig
@@ -25,6 +25,13 @@
             placeholder="Precio de tú oferta en euros" />
       </div>
     </div>
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="price">Destacar oferta (20€):</label>
+      <div class="col-sm-10">
+        <input id="price" type="checkbox" class="form-control" name="featured"
+            placeholder="Precio de tú oferta en euros" />
+      </div>
+    </div>
 
     <div class="form-group">        
       <div class="col-sm-offset-2 col-sm-10">
