--- a/src/views/shop.twig
+++ b/src/views/shop.twig
@@ -3,6 +3,40 @@
 {% block title %} Comprar {% endblock %}
 
 {% block main_container %}
+	{% if featured is defined and featured.legth > 0 %}
+	<h2>Ofertas destacadas</h2>
+	<div class="table-responsive">
+		<table class="table table-hover">
+			<thead>
+			<tr>
+				<th>Título</th>
+				<th>Descripción</th>
+				<th>Fecha de publicación</th>
+				<th>Precio</th>
+        <th></th>
+				<th class="col-md-1"></th>
+			</tr>
+			</thead>
+			<tbody>
+			{% for offer in featured %}
+				<tr>
+					<td>{{ offer.title }}</td>
+					<td>{{ offer.description }}</td>
+					<td>{{ offer.date }}</td>
+					<td>{{ offer.price }} €</td>
+					<td>
+          {% if offer.available %}
+						<a href="/offers/buy/{{ offer._id }}">Comprar</a><br>
+          {% else %}
+            Vendido
+          {% endif %}
+					</td>
+				</tr>
+			{% endfor %}
+			</tbody>
+		</table>
+	</div>
+	{% endif %}
   <h2>Ofertas disponibles</h2>
   <div class="row">
     <div id="custom-search-input ">
