--- a/src/views/shop.twig
+++ b/src/views/shop.twig
@@ -43,7 +43,7 @@
       <form method="get" action="/shop">
         <div class="input-group col-xs-8 col-sm-6 col-md-4 col-lg-5 pull-right">
           <input id="search" type="text" class="search-query form-control"
-            placeholder="Busca ofertas" name="search"/>
+            placeholder="Busca ofertas" name="search" value="{{ search is defined ? search : '' }}"/>
           <span class="input-group-btn">
             <button class="btn" type="submit">
               <span class="glyphicon glyphicon-search"></span>
