--- a/src/views/signup.twig
+++ b/src/views/signup.twig
@@ -28,8 +28,9 @@
     </div>
     <div class="form-group">
       <label class="control-label col-sm-2" for="lastname">Fecha de nacimiento:</label>
-      <div class="col-sm-10">
-        <h3>Por hacer</h3>
+       <div class="col-sm-10">
+        <input id="name" type="text" class="form-control" name="birthday"
+            placeholder="DD/MM/AAAA"/>
       </div>
     </div>
     <div class="form-group">
