--- a/sdi2223-entrega2-63/src/views/signup.twig
+++ b/sdi2223-entrega2-63/src/views/signup.twig
@@ -27,9 +27,9 @@
       </div>
     </div>
     <div class="form-group">
-      <label class="control-label col-sm-2" for="lastname">Fecha de nacimiento:</label>
+      <label class="control-label col-sm-2" for="birthday">Fecha de nacimiento:</label>
        <div class="col-sm-10">
-        <input id="name" type="text" class="form-control" name="birthday"
+        <input id="birthday" type="text" class="form-control" name="birthday"
             placeholder="DD/MM/AAAA"/>
       </div>
     </div>
