Arreglados problemas al mergear pruebas

--- a/sdi2223-entrega2-63/src/views/offers/myOffers.twig
+++ b/sdi2223-entrega2-63/src/views/offers/myOffers.twig
@@ -3,7 +3,7 @@
 {% block title %} Mis Ofertas {% endblock %}
 
 {% block main_container %}
-  <h2>Mis ofertas</h2>
+  <h2>Mis Ofertas</h2>
   <div class="row text-right">
 		<a href="/offers/new" class="btn btn-info" role="button">Nueva Oferta</a>
 	</div>
