Eliminados console.log's

--- a/sdi2223-entrega2-63/src/views/users.twig
+++ b/sdi2223-entrega2-63/src/views/users.twig
@@ -4,7 +4,7 @@
 
 {% block main_container %}
     <h2>Usuarios:</h2>
-    <form method="post" action="/users">
+    <form method="post" action="/users/delete">
     <div class="table-responsive">
         <table class="table table-hover">
             <thead>
